--- a/produtos-detalhamento/adidas-ultraboost.html
+++ b/produtos-detalhamento/adidas-ultraboost.html
@@ -73,7 +73,7 @@
                         <h3>Tamanhos Disponíveis</h3>
                         <div class="tamanhos">
                             <label>
-                                <input type="radio" name="tamanho" value="38" />
+                                <input type="radio" name="tamanho" value="38" required/>
                                 <span>38</span>
                             </label>
                             <label>
