--- a/produtos-detalhamento/puma-rs-x.html
+++ b/produtos-detalhamento/puma-rs-x.html
@@ -73,7 +73,7 @@
                         <h3>Tamanhos Disponíveis</h3>
                         <div class="tamanhos">
                             <label>
-                                <input type="radio" name="tamanho" value="38" />
+                                <input type="radio" name="tamanho" value="38" required />
                                 <span>38</span>
                             </label>
                             <label>
@@ -105,7 +105,7 @@
                         <h3>Cores Disponíveis</h3>
                         <div class="cores">
                             <label>
-                                <input type="radio" name="cor" value="preto-branco" />
+                                <input type="radio" name="cor" value="preto-branco" required />
                                 Preto/Branco
                             </label>
                             <label>
@@ -113,8 +113,8 @@
                                 Azul/Branco
                             </label>
                             <label>
-                                <input type="radio" name="cor" value="vermelho-preto" />
-                                Vermelho/Preto
+                                <input type="radio" name="cor" value="cinza-preto" />
+                                Cinza/Preto
                             </label>
                         </div>
 
@@ -189,7 +189,7 @@
                 </div>
                 <div>
                     <h5>Links Rápidos</h5>
-                     <div class="links">
+                    <div class="links">
                         <a href="./../home.html">Início</a>
                         <a href="./../produtos.html">Produtos</a>
                         <a href="./../noticias.html">Notícias</a>
