--- a/produtos-detalhamento/vans-old-skool.html
+++ b/produtos-detalhamento/vans-old-skool.html
@@ -74,7 +74,7 @@
                         <h3>Tamanhos Disponíveis</h3>
                         <div class="tamanhos">
                             <label>
-                                <input type="radio" name="tamanho" value="38" />
+                                <input type="radio" name="tamanho" value="38" required />
                                 <span>38</span>
                             </label>
                             <label>
@@ -106,7 +106,7 @@
                         <h3>Cores Disponíveis</h3>
                         <div class="cores">
                             <label>
-                                <input type="radio" name="cor" value="preto-branco" />
+                                <input type="radio" name="cor" value="preto-branco" required />
                                 Preto/Branco
                             </label>
                             <label>
@@ -190,7 +190,7 @@
                 </div>
                 <div>
                     <h5>Links Rápidos</h5>
-                   <div class="links">
+                    <div class="links">
                         <a href="./../home.html">Início</a>
                         <a href="./../produtos.html">Produtos</a>
                         <a href="./../noticias.html">Notícias</a>
