--- a/contato.html
+++ b/contato.html
@@ -50,17 +50,17 @@
                     <h2>Envie sua Mensagem</h2>
                     <div class="campo">
                         <label>Seu E-mail</label>
-                        <input name="email" type="email" placeholder="seuemail@.com">
+                        <input name="email" type="email" placeholder="seuemail@.com" required />
                     </div>
                     <div class="campo">
                         <label>Assunto</label>
-                        <input name="assunto" type="text" placeholder="Qual motivo do seu contato?">
+                        <input name="assunto" type="text" placeholder="Qual motivo do seu contato?" required />
                     </div>
 
                     <div class="campo">
                         <label>Mensagem</label>
                         <textarea name="mensagem" rows="5" cols="33"
-                            placeholder="Descreva sua dúvida, solicitação ou sugestão..."></textarea>
+                            placeholder="Descreva sua dúvida, solicitação ou sugestão..." required></textarea>
                     </div>
                     <div class="acoes">
                         <button class="btn" type="submit">Enviar mensagem</button>
